<resources>
    <string name="app_name">Minesweeper</string>
    <string name="minesweeper">Minesweeper</string>
    <string name="best_time">Best Time :</string>
    <string name="last_game_time">Last Game Time :</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="make_a_custom_board">Make a Custom Board</string>
    <string name="start">Start</string>
    <string name="enter_the_number_of_rows">Enter the Number of Rows</string>
    <string name="number_of_mines">Number of Mines</string>
    <string name="number_of_column">Number of Column</string>
    <string name="or">Or</string>
    <string name="select_difficulty">Please Select the Difficulty</string>
    <string name="please_enter">All fieds are Mandatory</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mines">Mines</string>
    <string name="time">Time</string>
    <string name="restart">Restart</string>
    <string name="bomb">💣</string>
    <string name="flag">🚩</string>
    <string name="rows_column">Rows and Column Should be equal</string>
    <string name="default_count">000</string>
    <string name="mine_should_be">Mines Should be less than %03d</string>
    <string name="blank" />
    <string name="should_be_less_12">Rows and Column should be less than 12</string>
    <string name="rows_and_column">Rows and Column Should be equal</string>
    <string name="more_than">Mines Should be Greater than 0</string>
    <string name="won">Game Won</string>
    <string name="over">Game Won</string>
</resources>